[gd_scene load_steps=19 format=2]

[ext_resource path="res://Components/held_item/held_item.gd" type="Script" id=1]
[ext_resource path="res://Entities/Item_Pickups/bow/bow_charging.png" type="Texture" id=2]
[ext_resource path="res://Entities/Item_Pickups/xbow/xbow.png" type="Texture" id=3]
[ext_resource path="res://Effects/LightSource.gd" type="Script" id=4]
[ext_resource path="res://Effects/light.png" type="Texture" id=5]
[ext_resource path="res://Entities/Item_Pickups/sword/sword.png" type="Texture" id=6]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("anchor/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anchor:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("anchor/sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "attack_sword"

[sub_resource type="Animation" id=1]
resource_name = "bow_charge"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("anchor/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anchor/sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("anchor/sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("anchor:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("anchor/sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "cast"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("anchor/sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 3, -8 ), Vector2( 5, -6 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anchor/sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 30.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "load"
tracks/0/type = "value"
tracks/0/path = NodePath("anchor/sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.7, 1 ),
"transitions": PoolRealArray( 0.5, 1, 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2, 4 ), Vector2( 2, 4 ), Vector2( 4, 3 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anchor/sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.7, 1 ),
"transitions": PoolRealArray( 0.5, 1, 0.5, 2, 1 ),
"update": 0,
"values": [ 0.0, 40.0, 40.0, 10.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("anchor:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.7, 2 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "startup_swing"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("anchor/sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.35, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3, -10 ), Vector2( -4, -10 ), Vector2( 1.5, -7 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anchor/sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -100.0, -110.0, 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "startup_swing_flip"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("anchor/sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.35, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3, 10 ), Vector2( -4, 10 ), Vector2( 1.5, 7 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anchor/sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0, 110.0, 0.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "startup_thrust"
length = 0.5
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("anchor/sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.45, 0.498, 0.5 ),
"transitions": PoolRealArray( 1, 0.5, 1, 4, 14.42 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( -8, 4 ), Vector2( -10, 4 ), Vector2( 0, 4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "startup_thrust_flip"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("anchor/sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.45, 0.499, 0.5 ),
"transitions": PoolRealArray( 1, 0.5, 1, 4, 34.2967 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( -8, -4 ), Vector2( -10, -4 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("anchor/sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("anchor/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anchor/sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("anchor/sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("anchor/sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[node name="held_item" type="Node2D"]
script = ExtResource( 1 )

[node name="anchor" type="Node2D" parent="."]
position = Vector2( 8, 0 )

[node name="sprite" type="Sprite" parent="anchor"]
texture = ExtResource( 6 )

[node name="light" type="Light2D" parent="anchor"]
enabled = false
texture = ExtResource( 5 )
energy = 0.0
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/attack_sword = SubResource( 8 )
anims/bow_charge = SubResource( 1 )
anims/cast = SubResource( 13 )
anims/load = SubResource( 2 )
anims/spin = SubResource( 3 )
anims/startup_swing = SubResource( 9 )
anims/startup_swing_flip = SubResource( 10 )
anims/startup_thrust = SubResource( 11 )
anims/startup_thrust_flip = SubResource( 12 )
anims/warn = SubResource( 5 )
anims/xbow_charge = SubResource( 6 )

[connection signal="tree_entered" from="." to="." method="_on_held_item_tree_entered"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
